Add roles endpoints
