# api/controllers/user.go
@@ -16,6 +16,8 @@ type UserController interface {
 	Register(ctx *gin.Context)
 	Login(ctx *gin.Context)
 	Delete(ctx *gin.Context)
+	AssignRole(ctx *gin.Context)
+	RemoveRole(ctx *gin.Context)
 }
 
 func NewUserController(service services.UserService) UserController {
@@ -158,6 +160,52 @@ func (c *userController) Delete(ctx *gin.Context) {
 	id := ctx.Param("id")
 
 	err := c.service.Delete(id)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		return
+	}
+
+	ctx.Status(http.StatusOK)
+}
+
+// @Summary Assign role to user
+// @Description Assign role to user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param id path string true "User ID"
+// @Param role path string true "Role"
+// @Success 200
+// @Router /users/{id}/roles/{role} [patch]
+func (c *userController) AssignRole(ctx *gin.Context) {
+	id := ctx.Param("id")
+	role := ctx.Param("role")
+
+	err := c.service.AssignRole(id, role)
+	if err != nil {
+		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		return
+	}
+
+	ctx.Status(http.StatusOK)
+}
+
+// @Summary Remove role from user
+// @Description Remove role from user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param id path string true "User ID"
+// @Param role path string true "Role"
+// @Success 200
+// @Router /users/{id}/roles/{role} [delete]
+func (c *userController) RemoveRole(ctx *gin.Context) {
+	id := ctx.Param("id")
+	role := ctx.Param("role")
+
+	err := c.service.RemoveRole(id, role)
 	if err != nil {
 		ctx.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
 		return
